Show success flash after appointment notes are updated

--- a/app/views/case/appointment.html
+++ b/app/views/case/appointment.html
@@ -6,6 +6,11 @@
 
 {% block content %}
 
+{{ govukNotificationBanner({
+  text: messages[0],
+  type: 'success'
+}) if messages.length > 0 }}
+
 {% include "case/_case-service-user-banner.html" %}
 
 {{ govukBackLink({
