--- a/app/views/sign-in.html
+++ b/app/views/sign-in.html
@@ -1,53 +1,37 @@
 {% extends "layout.html" %}
 {% set title = "Sign in" %}
-{% set buttonText = 'Save and continue' %}
 
 {% block content %}
 <h1 class="govuk-heading-xl">Sign in</h1>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
+    <form action="/sign-in" method="post" class="form">
+      {{ govukInput({
+        label: {
+          text: "First name",
+          classes: "govuk-label--s"
+        }
+      } | decorateFormAttributes(['user', 'first-name'])) }}
 
-    <form action="cases" method="post" class="form">
+      {{ govukInput({
+        label: {
+          text: "Last name",
+          classes: "govuk-label--s"
+        }
+      } | decorateFormAttributes(['user', 'last-name'])) }}
 
-    {{ govukInput({
-      label: {
-        text: "First name",
-        classes: "govuk-label--s",
-        isPageHeading: true
-      },
-      id: "event-name",
-      name: "event-name"
-    }) }}
+      {{ govukInput({
+        label: {
+          text: "Team",
+          classes: "govuk-label--s"
+        }
+      } | decorateFormAttributes(['user', 'team'])) }}
 
-    {{ govukInput({
-      label: {
-        text: "Last name",
-        classes: "govuk-label--s",
-        isPageHeading: true
-      },
-      id: "event-name",
-      name: "event-name"
-    }) }}
-
-    {{ govukInput({
-      label: {
-        text: "Team",
-        classes: "govuk-label--s",
-        isPageHeading: true
-      },
-      id: "event-name",
-      name: "event-name"
-    }) }}
-
-    {{ govukButton({
-      text: "Save and continue"
-    }) }}
-
+      {{ govukButton({
+        text: "Save and continue"
+      }) }}
     </form>
-
   </div>
 </div>
-
-
 {% endblock %}
