Tweak page title based on PR feedback
Co-authored-by: Paul Hayes <fofr@users.noreply.github.com>

--- a/app/views/case/which-appointment-to-add-notes-to.html
+++ b/app/views/case/which-appointment-to-add-notes-to.html
@@ -1,5 +1,5 @@
 {% extends "_wizard-form.html" %}
-{% set title = "When was the appointment?" %}
+{% set title = "Which appointment?" %}
 
 {% block pageNavigation %}
   {{ govukBackLink({href: '/cases/' + CRN + '/communication/add'}) }}
