--- a/app/views/case/appointment-notes.html
+++ b/app/views/case/appointment-notes.html
@@ -1,5 +1,5 @@
 {% extends "_wizard-form.html" %}
-{% set title = "Edit appointment notes" %}
+{% set title = "Add appointment notes" %}
 {% set buttonText = 'Save' %}
 
 {% block pageNavigation %}
