--- a/app/views/sign-in.html
+++ b/app/views/sign-in.html
@@ -6,7 +6,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <form action="/sign-in" method="post" class="form">
+    <form action="/cases" method="post" class="form">
       {{ govukInput({
         label: {
           text: "First name",
@@ -29,7 +29,7 @@
       } | decorateFormAttributes(['user', 'team'])) }}
 
       {{ govukButton({
-        text: "Save and continue"
+        text: "Sign in"
       }) }}
     </form>
   </div>
