--- a/app/views/add-other-communication/new.html
+++ b/app/views/add-other-communication/new.html
@@ -147,7 +147,7 @@
   } | decorateFormAttributes(['communication', CRN, sessionId, 'contents'])) }}
 
   <input type="hidden" id="type" name="[communication][{{ CRN }}][{{ sessionId }}][type]" value="{{ label | capitalize }}">
-  <input type="hidden" id="lastUpdatedBy" name="[communication][{{ CRN }}][{{ sessionId }}][lastUpdatedBy]" value="Mark Berridge">
+  <input type="hidden" id="lastUpdatedBy" name="[communication][{{ CRN }}][{{ sessionId }}][lastUpdatedBy]" value="{{ userName(data) }}">
   <input type="hidden" id="sessionId" name="[communication][{{ CRN }}][{{ sessionId }}][sessionId]" value="{{ sessionId }}">
 
 {% endblock %}
