Remove hardcoded references to Mark Berridge

--- a/app/views/add-other-communication/new.html
+++ b/app/views/add-other-communication/new.html
@@ -99,7 +99,7 @@
       },
       {
         text: 'You',
-        value: 'Mark Berridge'
+        value: userName(data)
       },
       {
         text: 'Other',
@@ -130,7 +130,7 @@
       },
       {
         text: 'You',
-        value: 'Mark Berridge'
+        value: userName(data)
       },
       {
         text: 'Other',
