--- a/app/views/includes/moj-header.html
+++ b/app/views/includes/moj-header.html
@@ -17,7 +17,7 @@
       <nav class="moj-header__navigation" aria-label="Account navigation">
         <ul class="moj-header__navigation-list">
           <li class="moj-header__navigation-item">
-            <a class="moj-header__navigation-link" href="#" aria-current="page">Mark Berridge</a>
+            <a class="moj-header__navigation-link" href="#" aria-current="page">{{ userName(data) }}</a>
           </li>
           <li class="moj-header__navigation-item">
             <a class="moj-header__navigation-link" href="/user-testing">Sign out</a>
