Use the given name for lastUpdatedBy
Assume "Mark Berridge" is a default that should be replaced if possible

--- a/app/views/case/_appointment-timeline-entry.html
+++ b/app/views/case/_appointment-timeline-entry.html
@@ -27,7 +27,7 @@
       With
     </dt>
     <dd class="app-card__one-third-column-list-value">
-      {{ entry.lastUpdatedBy }}
+      {{ lastUpdatedBy(entry.lastUpdatedBy, data) }}
     </dd>
   </div>
   <div class="app-card__one-third-column-list-item">
