--- a/app/views/case/other-communication.html
+++ b/app/views/case/other-communication.html
@@ -80,7 +80,7 @@
       ]
       }) }}
 
-    <p class="govuk-body-s govuk-hint-s">Last updated by {{ lastUpdatedBy(entry.lastUpdatedBy, data) }} on {{ entry.timestamp | dateWithYear }} at {{ entry.timestamp | govukTimeWithMinutes }}</p>
+    <p class="govuk-body-s govuk-hint-s">Last updated by {{ replaceDefaultUserWithSignedInUser(entry.lastUpdatedBy, data) }} on {{ entry.timestamp | dateWithYear }} at {{ entry.timestamp | govukTimeWithMinutes }}</p>
   </div>
 </div>
 
