--- a/app/views/index.html
+++ b/app/views/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h2 class="govuk-heading-l">Scenario</h2>
+    <h2 class="govuk-heading-l">Scenario {{ debugDate() }}</h2>
     <ul class="govuk-list govuk-list--bullet">
       <li>It’s Day 1 of the new National Probation Service
       </li>
