--- a/app/views/arrange-a-session/_session-details.html
+++ b/app/views/arrange-a-session/_session-details.html
@@ -12,7 +12,8 @@
   rarSubCategory: data['communication'][CRN][sessionId]['session-rar-subcategory'],
   locationCode: data['communication'][CRN][sessionId]['session-location-code'],
   repeating: data['communication'][CRN][sessionId]['repeating'],
-  repeatingFrequency: data['communication'][CRN][sessionId]['repeating-frequency']
+  repeatingFrequency: data['communication'][CRN][sessionId]['repeating-frequency'],
+  repeatEndDate: data['communication'][CRN][sessionId]['repeat-end-date']
 }) %}
 
 {{ govukSummaryList({
@@ -81,6 +82,19 @@
             href: arrangeSessionPath + "/when",
             text: "Change",
             visuallyHiddenText: "time"
+          }
+        ]
+      } if showAction
+    },
+    {
+      key: { text: "Repeat end date" },
+      value: { text: session.summary.repeatEndDate | dateWithDayAndWithoutYear },
+      actions: {
+        items: [
+          {
+            href: arrangeSessionPath + "/when",
+            text: "Change",
+            visuallyHiddenText: "date"
           }
         ]
       } if showAction
