--- a/app/views/add-other-communication/phone-call/confirmation.html
+++ b/app/views/add-other-communication/phone-call/confirmation.html
@@ -1,6 +1,6 @@
 {% extends "_wizard-page.html" %}
 {% set buttonText = 'Finish' %}
-{% set title = data['communication'][CRN][sessionId]['type'] | capitalize + ' saved' %}
+{% set title = 'Phone call saved' %}
 
 {% block page %}
   {% set panelHtml %}
