link content change

--- a/app/views/case/index.html
+++ b/app/views/case/index.html
@@ -106,7 +106,7 @@
     </ul>
 
     <p>
-      <a href="https://oasys.az.justice.gov.uk/eor/f?p=100:101::::::">View sentence plan</a>
+      <a href="https://oasys.az.justice.gov.uk/eor/f?p=100:101::::::">View sentence plan (in OASys)</a>
     </p>
 
   </div>
