--- a/app/views/case/details.html
+++ b/app/views/case/details.html
@@ -29,15 +29,42 @@
         rows: [
           {
             key: { text: "Address" },
-            value: { html: case.serviceUserPersonalDetails.address.join('<br>') }
+            value: { html: case.serviceUserPersonalDetails.address.join('<br>') },
+            actions: {
+              items: [
+                {
+                  href: "/to-delius",
+                  text: "Change",
+                  visuallyHiddenText: "address on National Delius"
+                }
+              ]
+            }
           },
           {
             key: { text: "Phone number" },
-            value: { text: case.serviceUserPersonalDetails.phone }
+            value: { text: case.serviceUserPersonalDetails.phone },
+            actions: {
+              items: [
+                {
+                  href: "/to-delius",
+                  text: "Change",
+                  visuallyHiddenText: "phone number on National Delius"
+                }
+              ]
+            }
           },
           {
             key: { text: "Email" },
-            value: { text: case.serviceUserPersonalDetails.email }
+            value: { text: case.serviceUserPersonalDetails.email },
+            actions: {
+              items: [
+                {
+                  href: "/to-delius",
+                  text: "Change",
+                  visuallyHiddenText: "email address on National Delius"
+                }
+              ]
+            }
           }
         ]
       }) }}
@@ -47,6 +74,7 @@
           <a href="/cases/{{ CRN }}/address-book-personal">View all personal contacts ({{ case.personalContacts.length }})</a>
         </p>
       {% endif %}
+
       <p class="govuk-body-s govuk-hint-s">
         Last updated 15 March 2021
       </p>
