Ask if a communication was sensitive or not
Put the question at the end
Reckon: after entering details a decision about sensitivity can be more easily made.

--- a/app/views/add-other-communication/email/check.html
+++ b/app/views/add-other-communication/email/check.html
@@ -59,6 +59,19 @@
             }
           ]
         }
+      },
+      {
+        key: { text: "Sensitive" },
+        value: { text: data['communication'][CRN][sessionId]['sensitive'] },
+        actions: {
+          items: [
+            {
+              href: path + '/sensitive',
+              text: "Change",
+              visuallyHiddenText: "if this was sensitive"
+            }
+          ]
+        }
       }
     ]
   }) }}
