--- a/app/views/case/other-communication.html
+++ b/app/views/case/other-communication.html
@@ -12,14 +12,14 @@
 
 {% block pageTitle %}{{ title }}{% endblock %}
 
+{% block beforeContent %}
+  {{ govukBackLink({
+    text: "Back to communication",
+    href: "/cases/" + CRN + "/communication"
+  }) }}
+{% endblock %}
+
 {% block content %}
-
-{% include "case/_case-service-user-banner.html" %}
-
-{{ govukBackLink({
-  text: "Back to communication",
-  href: "/cases/" + CRN + "/communication"
-}) }}
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
@@ -28,11 +28,11 @@
       {{ title }}
     </h1>
 
-    <h2 class="govuk-heading-m govuk-!-margin-bottom-6">
+    <!-- <h2 class="govuk-heading-m govuk-!-margin-bottom-6">
       {{ entry.timestamp | dateWithYear }} at {{ entry.timestamp | govukTime }}
-    </h2>
+    </h2> -->
 
-    <h3 class="govuk-heading-s">Communication details</h3>
+    <!-- <h3 class="govuk-heading-s">Communication details</h3> -->
 
     {{ govukSummaryList({
       classes: 'govuk-!-margin-bottom-9',
