--- a/app/views/case/other-communication.html
+++ b/app/views/case/other-communication.html
@@ -23,10 +23,14 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
+    <h1 class="govuk-heading-l">
       <span class="govuk-caption-l">Other communication</span>
       {{ title }}
     </h1>
+
+    {% if entry.sensitive %}
+      {{ govukTag({ text: "Sensitive", classes: "govuk-tag--grey govuk-!-margin-bottom-6" }) }}
+    {% endif %}
 
     <!-- <h2 class="govuk-heading-m govuk-!-margin-bottom-6">
       {{ entry.timestamp | dateWithYear }} at {{ entry.timestamp | govukTime }}
