Remove unnecessary values from macro

--- a/app/views/confirm-attendance/absence-acceptable.html
+++ b/app/views/confirm-attendance/absence-acceptable.html
@@ -23,14 +23,12 @@
        items: [
          {
            text: 'Yes',
-           value: 'Yes',
            conditional: {
              html: whyAcceptableHtml
            }
          },
          {
-           text: 'No',
-           value: 'No'
+           text: 'No'
          }
        ]
        } | decorateFormAttributes(['communication', CRN, sessionId, 'was-absence-acceptable']))
