--- a/app/views/confirm-attendance/_outcome-details.html
+++ b/app/views/confirm-attendance/_outcome-details.html
@@ -1,4 +1,12 @@
-{% set complianceText = case.serviceUserPersonalDetails.firstName + ' was absent' if data['communication'][CRN][sessionId]['did-service-user-comply'] == 'Absent' else data['communication'][CRN][sessionId]['did-service-user-comply']  %}
+{% set complianceText %}
+  {%- if (entry['did-service-user-comply'] === 'Yes') or (entry['did-service-user-comply'] === 'No') -%}
+    {{ entry['did-service-user-comply'] }}
+  {%- elif entry['did-service-user-comply'] === 'Absent' and entry['was-absence-acceptable'] === 'Yes' -%}
+    Acceptable absence
+  {%- elif entry['did-service-user-comply'] === 'Absent' and entry['was-absence-acceptable'] === 'No' -%}
+    Unacceptable absence
+  {%- endif -%}
+{% endset %}
 
 {% set uploadedFilesHtml %}
   {% for file in data['communication'][CRN][sessionId]['filenames'] | forceArray %}
@@ -22,6 +30,32 @@
         ]
       } if showAction
     },
+    {
+      key: { text: "Reason for not complying" },
+      value: { text: entry['non-compliance-reason'] if entry['non-compliance-reason'] !== 'Other' else entry['non-compliance-reason-other'] },
+      actions: {
+        items: [
+          {
+            href: "compliance",
+            text: "Change",
+            visuallyHiddenText: "complied"
+          }
+        ]
+      } if showAction
+    } if entry['did-service-user-comply'] === 'No',
+    {
+      key: { text: "Reason for absence" },
+      value: { text: entry['why-absence-acceptable'] if entry['was-absence-acceptable'] === 'Yes' },
+      actions: {
+        items: [
+          {
+            href: "absence-acceptable",
+            text: "Change",
+            visuallyHiddenText: "reason for absence"
+          }
+        ]
+      } if showAction
+    } if entry['was-absence-acceptable'] === 'Yes',
     {
       key: { text: "RAR activity" },
       value: { text: data['communication'][CRN][sessionId]['session-rar-category'] if data['communication'][CRN][sessionId]['session-counts-towards-rar'] == 'Yes' else 'No'  },
