Parse day/month/year values into date string
Zero pad day and month so users can add 06 or just 6 in day or month

--- a/app/views/arrange-a-session/_session-details.html
+++ b/app/views/arrange-a-session/_session-details.html
@@ -5,6 +5,9 @@
   typeOfSession: data['communication'][CRN][sessionId]['type-of-session'],
   contactType: data['communication'][CRN][sessionId]['other-type-of-session'],
   date: data['communication'][CRN][sessionId]['session-date'],
+  day: data['communication'][CRN][sessionId]['session-date-day'],
+  month: data['communication'][CRN][sessionId]['session-date-month'],
+  year: data['communication'][CRN][sessionId]['session-date-year'],
   startTime: data['communication'][CRN][sessionId]['session-start-time'],
   endTime: data['communication'][CRN][sessionId]['session-end-time'],
   countsTowardsRAR: data['communication'][CRN][sessionId]['session-counts-towards-rar'] == 'Yes',
