--- a/app/views/includes/ndelius-record-details.html
+++ b/app/views/includes/ndelius-record-details.html
@@ -3,6 +3,9 @@
   typeOfSession: data['communication'][CRN]['type-of-session'],
   contactType: data['communication'][CRN]['other-type-of-session'],
   date: data['communication'][CRN]['session-date'],
+  day: data['communication'][CRN]['session-date-day'],
+  month: data['communication'][CRN]['session-date-month'],
+  year: data['communication'][CRN]['session-date-year'],
   startTime: data['communication'][CRN]['session-start-time'],
   endTime: data['communication'][CRN]['session-end-time'],
   countsTowardsRAR: data['communication'][CRN]['session-counts-towards-rar'] == 'Yes',
