Save the parsed date string when confirming appointment

--- a/app/views/arrange-a-session/_session-details.html
+++ b/app/views/arrange-a-session/_session-details.html
@@ -19,6 +19,10 @@
   repeatingCount: data['communication'][CRN][sessionId]['repeating-count']
 }) %}
 
+{% if showAction %}
+  <input type="hidden" id="date-string" name="[communication][{{ CRN }}][{{ sessionId }}][session-date]" value="{{ session.summary.date }}">
+{% endif %}
+
 {{ govukSummaryList({
   classes: 'govuk-!-margin-bottom-9',
   rows: [
