Give more space to right column headings

--- a/app/views/case/index.html
+++ b/app/views/case/index.html
@@ -245,7 +245,7 @@
       </a>
     </p>
 
-    <h2 class="govuk-heading-m">
+    <h2 class="govuk-heading-m govuk-!-margin-top-6">
       Next appointment
     </h2>
     {% set nextApp = nextAppointment(CRN, data) %}
@@ -265,7 +265,7 @@
       {% endif %}
     </div>
 
-    <h2 class="govuk-heading-m">
+    <h2 class="govuk-heading-m govuk-!-margin-top-6">
       Appointment attendance
     </h2>
 
