Rename Quick Look to Overview
See if Overview tests ok

--- a/app/views/case/_case-nav.html
+++ b/app/views/case/_case-nav.html
@@ -7,7 +7,7 @@
             {% if currentNavSection == 'quick-look' %}
             aria-current="page"
             {% endif %}
-            href="/cases/{{ CRN }}">Quick look</a>
+            href="/cases/{{ CRN }}">Overview</a>
         </li>
         <li class="moj-sub-navigation__item">
           <a class="moj-sub-navigation__link govuk-link--no-visited-state"
