--- a/app/views/case/index.html
+++ b/app/views/case/index.html
@@ -13,7 +13,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-l govuk-!-margin-bottom-7">Quick look</h1>
+    <h1 class="govuk-heading-l govuk-!-margin-bottom-7">Overview</h1>
 
     <h2 class="govuk-heading-m">
       Sentence
