Update visually hidden text
Co-authored-by: Paul Hayes <fofr@users.noreply.github.com>

--- a/app/views/confirm-attendance/_outcome-details.html
+++ b/app/views/confirm-attendance/_outcome-details.html
@@ -38,7 +38,7 @@
           {
             href: "compliance",
             text: "Change",
-            visuallyHiddenText: "complied"
+            visuallyHiddenText: "reason for not complying"
           }
         ]
       } if showAction
