--- a/app/views/confirm-attendance/confirmation.html
+++ b/app/views/confirm-attendance/confirmation.html
@@ -5,8 +5,8 @@
 {% block page %}
 
   {% set panelHtml %}
-    <strong>{{ data['communication'][CRN][sessionId]['type-of-session'] }}</strong><br>
-    {{ data['communication'][CRN][sessionId]['session-date'] | dateWithDayAndWithoutYear }} from {{ data['communication'][CRN][sessionId]['session-start-time'] }} to {{ data['communication'][CRN][sessionId]['session-end-time'] }}
+    <strong>{{ appointment['type-of-session'] }}</strong><br>
+    {{ appointment['session-date'] | dateWithDayAndWithoutYear }} from {{ appointment['session-start-time'] }} to {{ appointment['session-end-time'] }}
   {% endset %}
 
   {{ govukPanel({
