--- a/app/views/arrange-a-session/confirmation.html
+++ b/app/views/arrange-a-session/confirmation.html
@@ -1,23 +1,23 @@
 {% extends "_wizard-page.html" %}
-{% set rearranging = data['communication'][CRN][sessionId]['rearrange-or-cancel'] %}
+{% set rearranging = appointment['rearrange-or-cancel'] %}
 {% set buttonText = 'Finish' %}
 {% set title = "Appointment rearranged" if rearranging else "Appointment arranged" %}
 
 {% block page %}
   {% set session = arrangedSession({
     providerCode: data['provider-code'],
-    typeOfSession: data['communication'][CRN][sessionId]['type-of-session'],
-    contactType: data['communication'][CRN][sessionId]['other-type-of-session'],
-    date: data['communication'][CRN][sessionId]['session-date'],
-    day: data['communication'][CRN][sessionId]['session-date-day'],
-    month: data['communication'][CRN][sessionId]['session-date-month'],
-    year: data['communication'][CRN][sessionId]['session-date-year'],
-    startTime: data['communication'][CRN][sessionId]['session-start-time'],
-    endTime: data['communication'][CRN][sessionId]['session-end-time'],
-    countsTowardsRAR: data['communication'][CRN][sessionId]['session-counts-towards-rar'] == 'Yes',
-    rarCategory: data['communication'][CRN][sessionId]['session-rar-category'],
-    rarSubCategory: data['communication'][CRN][sessionId]['session-rar-subcategory'],
-    locationCode: data['communication'][CRN][sessionId]['session-location-code']
+    typeOfSession: appointment['type-of-session'],
+    contactType: appointment['other-type-of-session'],
+    date: appointment['session-date'],
+    day: appointment['session-date-day'],
+    month: appointment['session-date-month'],
+    year: appointment['session-date-year'],
+    startTime: appointment['session-start-time'],
+    endTime: appointment['session-end-time'],
+    countsTowardsRAR: appointment['session-counts-towards-rar'] == 'Yes',
+    rarCategory: appointment['session-rar-category'],
+    rarSubCategory: appointment['session-rar-subcategory'],
+    locationCode: appointment['session-location-code']
   }) %}
 
   {% set panelHtml %}
